--- a/css/screen.css
+++ b/css/screen.css
@@ -271,3 +271,22 @@ main h2{
 .footer a:hover{
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px){
+    .login__container{
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        width: 100%;
+    }
+
+    header {
+        padding: 0 !important;
+    }
+
+    .footer{
+        padding-left: 0;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
